ui(style): fix spacing at "add attribute" button

--- a/src/components/inclde-view/inclde-view.css
+++ b/src/components/inclde-view/inclde-view.css
@@ -80,7 +80,7 @@ inclde-input {
 
 .editing-container {
   border-top: 1px solid #aaa;
-  margin-top: 4px;
-  padding-top: 7px;
-  margin-bottom: 20px;
+  margin-top: 1em;
+  padding-top: 1em;
+  margin-bottom: 1em;
 }
